# ringlight_firmware

./: .gitignore  CMakeLists.txt  Makefile  README.md  avrdude.conf  doxygen.conf  rl_v2_test_ws2812b.atsln
gui/: app_state.py  command.py  ctrl.py  observer.py
include/: channel_controller.h  clock_config.h  compiler.h  driver_init.h  port.h  system_init.h
include/Atmel.ATtiny_DFP/: Atmel.ATtiny_DFP.pdsc  package.content
include/comm/: comm_handler.h  comm_parser.h  converters.h  frame.h  protocol.h
include/commands/: cmd_get_info.h  cmd_set_chn_color.h  cmd_set_chn_color_rgb.h  cmd_set_chn_color_w.h  cmd_set_shutter_focus.h  command.h  command_parser.h  command_processor.h  commands.h
include/controllers/: channel_ctrl.h  focus_shutter_ctrl.h
include/drivers/: pwm.h  rtc.h  usart.h  ws2812.h
include/utils/: chn_ctrl_test_suite.h  circular_buffer.h  comm_test_suit.h  utils.h  ws2812_test_suite.h
rl_v2_test_ws2812b/: MakeFile  main.c  rl_v2_test_ws2812b.componentinfo.xml  rl_v2_test_ws2812b.cproj
rl_v2_test_ws2812b/.atmelstart/: AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart
rl_v2_test_ws2812b/Config/: RTE_Components.h
rl_v2_test_ws2812b/Debug/: Makefile  atmel_start.d  driver_isr.d  main.d  makedep.mk  rl_v2_test_ws2812b.elf  rl_v2_test_ws2812b.hex  rl_v2_test_ws2812b.lss  rl_v2_test_ws2812b.map  rl_v2_test_ws2812b.srec
rl_v2_test_ws2812b/include/: atmel_start_pins.h  delay.h  driver_init.h  mcp4827.h  rtc.h  tcb.h  ws2812_driver.h  (+1 more)
src/: driver_init.c  main.c  mainpage.md  system_init.c
test/: comm_send_frame.c
(+285 files in other folders)
